[package]
edition = "2021"
name = "salesvc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4.2"
futures-util = "0.3.30"
hmac = "0.12.1"
itertools = "0.12.1"
prost = "0.12.3"
prost-types = "0.12.3"
serde = { version = "1.0.193", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.57"
time = "0.3.31"
tokio = { version = "1.34.0", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
] }
tokio-stream = "0.1.14"
tonic = "0.11.0"
tonic-reflection = "0.11.0"
tower = { version = "0.4.13", features = [] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


[build-dependencies]
tonic-build = "0.11.0"
